# safenudge.xyz

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.github/workflows/: ci.yml
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  bootstrap.tsx  index.css  main.tsx
app/src/components/: Badge.tsx  Button.tsx  CancelGroupSheet.tsx  Card.tsx  DistributeSummary.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icon.tsx  Input.tsx  Logo.tsx  Nav.tsx  NudgeToast.tsx  PageLayout.tsx  ProgressBar.tsx  TransactionStatus.tsx  WalletProvider.tsx  index.ts
app/src/hooks/: index.ts  useAnalyticsIdentify.ts  useAnchorProgram.ts  useGroupConfig.ts  useGroupMembers.ts  useMemberRecord.ts  useTransaction.ts
app/src/i18n/: en.json  index.ts  pt-BR.json
app/src/idl/: safenudge-types.ts  safenudge.json
app/src/pages/: ComoFunciona.tsx  CreateGroup.tsx  GroupDashboard.tsx  JoinGroup.tsx  Landing.tsx  MyGroups.tsx  Seguranca.tsx
docs/: design-system.md  design-tokens.json  devnet-testing.md
docs/screens/: README.md
programs/safenudge/: Cargo.toml
programs/safenudge/src/: errors.rs  lib.rs
programs/safenudge/src/instructions/: create_group.rs  deposit.rs  distribute.rs  emergency_cancel.rs  join_group.rs  mod.rs  start_cycle.rs  withdraw_fees.rs
programs/safenudge/src/state/: group_config.rs  member_record.rs  member_validation.rs  mod.rs
tests/: safenudge.ts
(+11 files in other folders)
