[package]
name = "safenudge"
version = "0.1.0"
description = "Group accountability savings protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safenudge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
mainnet = []
devnet = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
